# doge-grid-bot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  HMM_INTEGRATION.md  KELLY_IMPLEMENTATION_PLAN_REVIEW.md  KELLY_SPEC.md  README.md  STATE_MACHINE.md  VINTAGE_DATA_COLLECTION_PROMPT.md  ai_advisor.py  backtest_v1.py  bayesian_engine.py  bocpd.py  bot.py  config.py  dashboard.py  doge_core.py  factory_viz.py  grid_strategy.py  hmm_regime_detector.py  kelly_sizer.py  kraken_client.py  notifier.py  pair_model.py  pair_scanner.py  position_ledger.py  railway.toml  requirements.txt  signal_digest.py  state_machine.py  stats_engine.py  supabase_store.py  survival_model.py  telegram_menu.py  throughput_sizer.py
docs/: ACCOUNT_AWARE_B_SIDE_SIZING_SPEC.md  AI_MULTI_PROVIDER_IMPLEMENTATION_PLAN.md  AI_MULTI_PROVIDER_SPEC.md  AI_REGIME_ADVISOR_SPEC.md  AI_REGIME_MODEL_UPGRADE_IMPLEMENTATION_PLAN.md  AI_REGIME_MODEL_UPGRADE_SPEC.md  AI_SUGGESTED_TTL_IMPLEMENTATION_PLAN.md  AI_SUGGESTED_TTL_SPEC.md  BALANCE_INTELLIGENCE_IMPLEMENTATION_PLAN.md  BALANCE_INTELLIGENCE_SPEC.md  BAUHAUS_OVERLAY_SPEC.md  BAYESIAN_INTELLIGENCE_IMPLEMENTATION_PLAN.md  BAYESIAN_INTELLIGENCE_SPEC.md  CAPACITY_TELEMETRY_SPEC.md  (+70 more)
doge-core/: doge-core.cabal
doge-core/app/: Main.hs
doge-core/src/DogeCore/: Invariants.hs  Transition.hs  Types.hs
doge-core/stub/: doge-core-exe  doge-core-exe.cmd  doge_core_stub_backend.py
doge-hmm/: Cargo.toml  README.md  pyproject.toml
doge-hmm/src/: features.rs  hmm.rs  lib.rs  regime.rs
doge-hmm/src/math/: baum_welch.rs  ema.rs  mod.rs
(+38 files in other folders)
